--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -32,16 +32,24 @@
     </style>
   </head>
   <body>
-    <header>
-      <nav class="flex flex-jc-sb">
-        <a href="/" class="logo">
+    <header class="header">
+      <nav class="flex flex-jc-sb flex-ai-c">
+        <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
-        <a href="#" class="hamburger">
+        <a href="#" class="header__menu">
           <span></span>
           <span></span>
           <span></span>
         </a>
+
+        <div class="header__links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+        </div>
       </nav>
     </header>
 
