added cta and styling it

--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -50,6 +50,8 @@
           <a href="#">Blog</a>
           <a href="#">Careers</a>
         </div>
+
+        <a class="button header__cta" type="button">Request Invite</a>
       </nav>
     </header>
 
