--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -37,13 +37,13 @@
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
-        <a href="#" class="header__menu">
+        <a href="#" class="header__menu hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
         </a>
 
-        <div class="header__links">
+        <div class="header__links hide-for-mobile">
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
@@ -51,7 +51,7 @@
           <a href="#">Careers</a>
         </div>
 
-        <a class="button header__cta" type="button">Request Invite</a>
+        <a class="button header__cta hide-for-mobile" type="button">Request Invite</a>
       </nav>
     </header>
 
