added js for hamburger menu

--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -37,7 +37,7 @@
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
-        <a href="#" class="header__menu hide-for-desktop">
+        <a href="#" class="header__menu hide-for-desktop" id="btnHamburger">
           <span></span>
           <span></span>
           <span></span>
@@ -51,7 +51,9 @@
           <a href="#">Careers</a>
         </div>
 
-        <a class="button header__cta hide-for-mobile" type="button">Request Invite</a>
+        <a class="button header__cta hide-for-mobile" type="button"
+          >Request Invite</a
+        >
       </nav>
     </header>
 
