--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -33,6 +33,7 @@
   </head>
   <body>
     <header class="header">
+      <div class="overlay"></div>
       <nav class="flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
