added mobile menu stm and css

--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -34,11 +34,11 @@
   <body>
     <header class="header">
       <div class="overlay"></div>
-      <nav class="flex flex-jc-sb flex-ai-c">
+      <nav class="flex flex-jc-sb flex-ai-c container">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
-        <a href="#" class="header__menu hide-for-desktop" id="btnHamburger">
+        <a href="#" class="header__toggle hide-for-desktop" id="btnHamburger">
           <span></span>
           <span></span>
           <span></span>
@@ -56,6 +56,14 @@
           >Request Invite</a
         >
       </nav>
+
+      <div class="header__menu">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+      </div>
     </header>
 
     <div class="attribution">
