Overlay issue fixed

--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="overlay"></div>
+      <div class="overlay has-fade"></div>
       <nav class="flex flex-jc-sb flex-ai-c container">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
@@ -57,7 +57,7 @@
         >
       </nav>
 
-      <div class="header__menu">
+      <div class="header__menu has-fade">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
