--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -68,7 +68,7 @@
 
     <section class="hero">
       <div class="hero__image"></div>
-      <div class="hero__text">
+      <div class="hero__text container">
         <h1>Next generation digital banking!!!!</h1>
         <p>
           Take your financial life online. Your Easybank account will be a
