Text Section on Desktop

--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -34,7 +34,7 @@
   <body>
     <header class="header">
       <div class="overlay has-fade"></div>
-      <nav class="flex flex-jc-sb flex-ai-c container">
+      <nav class="flex flex-jc-sb flex-ai-c container container--pall">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
@@ -66,9 +66,9 @@
       </div>
     </header>
 
-    <section class="hero">
+    <section class="hero container">
       <div class="hero__image"></div>
-      <div class="hero__text container">
+      <div class="hero__text container container--pall">
         <h1>Next generation digital banking!!!!</h1>
         <p>
           Take your financial life online. Your Easybank account will be a
