--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -66,16 +66,19 @@
       </div>
     </header>
 
-    <section class="hero container">
-      <div class="hero__image"></div>
-      <div class="hero__text container container--pall">
-        <h1>Next generation digital banking!!!!</h1>
-        <p>
-          Take your financial life online. Your Easybank account will be a
-          one-stop-shop for spending, saving, budgeting, investing, and much
-          more.
-        </p>
-        <a href="#" class="button hero__cta">Request Invite</a>
+    <section class="hero">
+      <div class="container">
+        <div class="hero__image"></div>
+
+        <div class="hero__text container--pall">
+          <h1>Next generation digital banking!!!!</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <a href="#" class="button hero__cta">Request Invite</a>
+        </div>
       </div>
     </section>
 
