--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-    <section class="features">
+    <section class="features container container--pall">
       <h2>Why choose Easybank?</h2>
       <p>
         We leverage Open Banking to turn your bank account into your financial
