--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -83,11 +83,13 @@
     </section>
 
     <section class="features container container--pall">
-      <h2>Why choose Easybank?</h2>
-      <p>
-        We leverage Open Banking to turn your bank account into your financial
-        hub. Control your finances like never before.
-      </p>
+      <div class="feature__intro">
+        <h2>Why choose Easybank?</h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your financial
+          hub. Control your finances like never before.
+        </p>
+      </div>
 
       <div class="feature__grid">
         <div class="feature__item">
