--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -217,7 +217,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer__logo" href="#">
-          <img src="/images/logo.svg" />
+          <img src="/images/logo-dark.svg" />
         </a>
 
         <div class="footer__social">
